--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -1,72 +1,76 @@
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Navbar</title>
+<style>
+  /* Toggle arrow style */
+  .toggle-sub-menu {
+    margin-left: 5px;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid white;
+    vertical-align: middle;
+    transition: transform 0.3s ease;
+  }
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  /* Rotate arrow when dropdown is open */
+  .dropdown.show .toggle-sub-menu {
+    transform: rotate(180deg);
+  }
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  /* Optional: Adjust dropdown hover effect */
+  .navbar-nav .dropdown:hover .dropdown-menu {
+    display: block;
+  }
 
-  <style>
-    .toggle-sub-menu {
-      margin-left: 5px;
-      display: inline-block;
-      width: 0;
-      height: 0;
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-top: 5px solid white;
-      vertical-align: middle;
-      transition: transform 0.3s ease;
-    }
+  /* Social sidebar styles */
+  .social-sidebar {
+    position: fixed;
+    top: 40%;
+    right: 0;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
 
-    .dropdown.show .toggle-sub-menu {
-      transform: rotate(180deg);
-    }
+  .social-sidebar a {
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px 0 0 5px;
+    transition: background 0.3s ease;
+  }
 
-    .navbar-nav .dropdown:hover .dropdown-menu {
-      display: block;
-    }
+  .social-sidebar a:hover {
+    opacity: 0.9;
+  }
 
-    .social-sidebar {
-      position: fixed;
-      top: 40%;
-      right: 0;
-      z-index: 999;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-    }
+  .social-sidebar a.whatsapp {
+    background-color: #25D366;
+  }
 
-    .social-sidebar a {
-      display: block;
-      padding: 10px;
-      color: #fff;
-      text-align: center;
-      border-radius: 5px 0 0 5px;
-      transition: background 0.3s ease;
-    }
+  .social-sidebar a.facebook {
+    background-color: #3b5998;
+  }
 
-    .social-sidebar a:hover {
-      opacity: 0.9;
-    }
+  .social-sidebar a.instagram {
+    background-color: #E1306C;
+  }
 
-    .social-sidebar a.whatsapp { background-color: #25D366; }
-    .social-sidebar a.facebook { background-color: #3b5998; }
-    .social-sidebar a.instagram { background-color: #E1306C; }
-    .social-sidebar a.linkedin { background-color: #0077b5; }
+  .social-sidebar a.linkedin {
+    background-color: #0077b5;
+  }
 
-    .social-sidebar i {
-      font-size: 18px;
-    }
-  </style>
-</head>
-<body>
+  .social-sidebar i {
+    font-size: 18px;
+  }
+</style>
+
+<!-- Font Awesome (for social icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container">
@@ -79,8 +83,14 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'about_view' %}">About</a></li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'about_view' %}">About</a>
+        </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -104,13 +114,30 @@
           </ul>
         </li>
 
-        <li class="nav-item"><a class="nav-link" href="{% url 'quality' %}">Quality</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'infrastructure' %}">Infrastructure</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'certification' %}">Certification</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'why_choose_us' %}">Why Choose Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'blog' %}">Blog</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'career' %}">Career</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'quality' %}">Quality</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'infrastructure' %}">Infrastructure</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'certification' %}">Certification</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'career' %}">Career</a>
+        </li>
+
       </ul>
     </div>
   </div>
@@ -132,10 +159,8 @@
   </a>
 </div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 <script>
+  // Optional JS for dropdown toggle behavior if needed manually
   document.querySelectorAll('.nav-item.dropdown > a').forEach((el) => {
     el.addEventListener('click', function (e) {
       const parent = this.closest('.dropdown');
@@ -145,6 +170,3 @@
     });
   });
 </script>
-
-</body>
-</html>
