--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -92,10 +92,9 @@
           <a class="nav-link" href="{% url 'about_view' %}">About</a>
         </li>
 
-        <!-- Single Products Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Products
+            Products <span class="toggle-sub-menu"></span>
           </a>
           <ul class="dropdown-menu" aria-labelledby="productsDropdown">
             <li><a class="dropdown-item" href="{% url 'u-panel-fibc' %}">U Panel FIBC</a></li>
@@ -143,7 +142,6 @@
     </div>
   </div>
 </nav>
-
 
 <!-- Social Sidebar -->
 <div class="social-sidebar">
