--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -93,7 +93,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="{% url 'product' %}" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products <span class="toggle-sub-menu"></span>
           </a>
           <ul class="dropdown-menu" aria-labelledby="productsDropdown">
