--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -93,16 +93,9 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a
-    class="nav-link dropdown-toggle"
-    href="products.html"
-    id="productsDropdown"
-    role="button"
-    data-bs-toggle="dropdown"
-    aria-expanded="false"
-  >
-    Products
-  </a>
+          <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Products <span class="toggle-sub-menu"></span>
+          </a>
           <ul class="dropdown-menu" aria-labelledby="productsDropdown">
             <li><a class="dropdown-item" href="{% url 'u-panel-fibc' %}">U Panel FIBC</a></li>
             <li><a class="dropdown-item" href="{% url 'circular-fibc' %}">Circular FIBC</a></li>
