--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -111,7 +111,7 @@
   </p>
 
   <p class="mb-1">
-    <i class="bi bi-envelope-fill me-1"></i> manish@khemisatiindia.com
+    <i class="bi bi-envelope-fill me-1"></i>khemisati123@gmail.com
   </p>
   
   <p>
