contact.html add changes

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,26 +26,26 @@
       </div>
       <div class="col-md-4">
         <h5>Factory Address</h5>
-        <p>Block No 447, 450 & 458, Mouje Sari, Ta Sanand, Dist Ahmedabad, Gujarat–382220</p>
+        <p>Plot No.23,Survey No.185/1/1,Village Dokmmdi,Amil,Silvassa.UT of DNH&DD,396230 India</p>
       </div>
       <div class="col-md-4">
         <h5>For Product Sales Inquiries</h5>
-        <p>+91 90990 82104<br>sales@alpinefibc.com</p>
+        <p>+91 90990 82104<br>khemisati123@gmail.com</p>
       </div>
     </div>
 
     <div class="row text-center mb-5">
       <div class="col-md-4">
         <h5>For Domestic Sales Inquiries</h5>
-        <p>+91 90990 82105<br>sales@alpinefibc.com</p>
+        <p>+91 9377028911<br>khemisati123@gmail.com</p>
       </div>
       <div class="col-md-4">
         <h5>For Export Sales Inquiries</h5>
-        <p>+91 90990 82106<br>sales@alpinefibc.com</p>
+        <p>+91 9377028911<br>khemisati123@gmail.com</p>
       </div>
       <div class="col-md-4">
         <h5>For Job Information</h5>
-        <p>+91 90990 82108<br>hr@alpinefibc.com</p>
+        <p>+91 9377028911<br>khemisati123@gmail.com</p>
       </div>
     </div>
 
@@ -108,7 +108,7 @@
 
     // WhatsApp message format
     const text = `Name: ${name}%0AEmail: ${email}%0AMobile: ${mobile}%0AMessage: ${message}`;
-    const phoneNumber = "918734899793"; // Replace with your WhatsApp number (without +)
+    const phoneNumber = "918108666295"; // Replace with your WhatsApp number (without +)
 
     // Open WhatsApp link
     window.open(`https://wa.me/${phoneNumber}?text=${text}`, '_blank');
