--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,7 +22,7 @@
     <div class="row text-center mb-5">
       <div class="col-md-4">
         <h5>Registered Office</h5>
-        <p>SHRI KHEMISATI PLASPACK LLP<br>A 1206-1207, “The Capital”, Nr Hetarth Party Plot, Science City Road, Sola, Ahmedabad–380060</p>
+        <p>SHRI KHEMISATI PLASPACK LLP<br>E 514,Kailash Industrial Complex,Parksite,Vikhroli(W),Mumbai 400079,Plot No.125,Dan Udyog Sahakari Sangh Ltd,Village Piparia,Silvassa 396230.phone:9820123033 / 9322123033 Email :khemiindia@yahoo.com</p>
       </div>
       <div class="col-md-4">
         <h5>Factory Address</h5>
@@ -30,22 +30,22 @@
       </div>
       <div class="col-md-4">
         <h5>For Product Sales Inquiries</h5>
-        <p>+91 90990 82104<br>khemisati123@gmail.com</p>
+        <p>+91 9820123033<br>khemiindia@yahoo.com</p>
       </div>
     </div>
 
     <div class="row text-center mb-5">
       <div class="col-md-4">
         <h5>For Domestic Sales Inquiries</h5>
-        <p>+91 9377028911<br>khemisati123@gmail.com</p>
+        <p>+91 9377028911, 9322123033<br>khemisati123@gmail.com</p>
       </div>
       <div class="col-md-4">
         <h5>For Export Sales Inquiries</h5>
-        <p>+91 9377028911<br>khemisati123@gmail.com</p>
+        <p>+91 9377028911,9322123033<br>khemisati123@gmail.com</p>
       </div>
       <div class="col-md-4">
         <h5>For Job Information</h5>
-        <p>+91 9377028911<br>khemisati123@gmail.com</p>
+        <p>+91 9377028911,9322123033<br>khemisati123@gmail.com</p>
       </div>
     </div>
 
