--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col-md-4">
         <h5>For Product Sales Inquiries</h5>
-        <p>+91 9820123033<br>khemiindia@yahoo.com</p>
+        <p>+91 9377028911,9322123033<br>khemisati123@gmail.com</p>
       </div>
     </div>
 
