footer add changes

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -97,9 +97,7 @@
   <p class="mb-2">
     <i class="bi bi-geo-alt-fill me-1"></i>
     <strong>Regd. Office:</strong><br>
-    E514, Kailash Industrial Complex,<br>
-    Parksite, Vikhroli (West),<br>
-    Mumbai 400 079, India.
+   E 514,Kailash Industrial Complex,Parksite,Vikhroli(W),Mumbai 400079,Plot No.125,Dan Udyog Sahakari Sangh Ltd,Village Piparia,Silvassa 396230.<br>phone:9820123033 / 9322123033 Email :khemiindia@yahoo.com
   </p>
 
   <p class="mb-2">
