insta,facebook link delete

--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -145,16 +145,12 @@
 
 <!-- Social Sidebar -->
 <div class="social-sidebar">
-  <a href="https://wa.me/919999999999" class="whatsapp" target="_blank" title="WhatsApp">
+  <a href="https://wa.me/919820123033" class="whatsapp" target="_blank" title="WhatsApp">
     <i class="fab fa-whatsapp"></i>
   </a>
-  <a href="https://facebook.com/yourprofile" class="facebook" target="_blank" title="Facebook">
-    <i class="fab fa-facebook-f"></i>
-  </a>
-  <a href="https://instagram.com/yourprofile" class="instagram" target="_blank" title="Instagram">
-    <i class="fab fa-instagram"></i>
-  </a>
-  <a href="https://linkedin.com/in/yourprofile" class="linkedin" target="_blank" title="LinkedIn">
+ 
+  
+  <a href="https://linkedin.com/in/https://www.linkedin.com/company/87458162/admin/dashboard/" class="linkedin" target="_blank" title="LinkedIn">
     <i class="fab fa-linkedin-in"></i>
   </a>
 </div>
