--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -150,7 +150,7 @@
   </a>
  
   
-  <a href="https://linkedin.com/in/https://www.linkedin.com/company/87458162/admin/dashboard/" class="linkedin" target="_blank" title="LinkedIn">
+<a href="https://www.linkedin.com/company/87458162/" class="linkedin" target="_blank" title="LinkedIn">
     <i class="fab fa-linkedin-in"></i>
   </a>
 </div>
