--- a/templates/infrastructure.html
+++ b/templates/infrastructure.html
@@ -46,14 +46,36 @@
     </p>
   </div>
 </div>
-
-<!-- Centered Image -->
+<!-- Grid of 8 Images inside vc_row structure -->
 <div class="vc_row vc_row-outer vc_row-fluid">
   <div class="wpb_column vc_column_container vc_col-sm-12">
     <div class="vc_column-inner">
-      <div class="wpb_wrapper text-center">
-        <div class="tm-image tm-animation move-up">
-          <img src="{% static 'images/infrastruc11.jpg' %}" alt="infrastruc11" class="img-fluid" style="max-width: 100%; height: auto;">
+      <div class="wpb_wrapper">
+        <div class="row g-4 text-center">
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc1.jpg' %}" alt="infrastruc1" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc2.jpg' %}" alt="infrastruc2" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc3.jpg' %}" alt="infrastruc3" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc4.jpg' %}" alt="infrastruc4" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc5.jpg' %}" alt="infrastruc5" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc6.jpg' %}" alt="infrastruc6" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc7.jpg' %}" alt="infrastruc7" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <img src="{% static 'images/infrastruc8.jpg' %}" alt="infrastruc8" class="img-fluid" style="height: 250px; object-fit: cover; width: 100%;">
+          </div>
         </div>
       </div>
     </div>
