--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,15 @@
     <div class="row g-4 mb-4">
       <!-- Google Maps -->
       <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!..." width="100%" height="300" style="border:0;" allowfullscreen loading="lazy"></iframe>
+<iframe
+  src="https://www.google.com/maps/embed?pb=!https://g.co/kgs/42uCGMa"
+  width="100%"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
       </div>
       <div class="col-md-6">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!..." width="100%" height="300" style="border:0;" allowfullscreen loading="lazy"></iframe>
