--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
 </iframe>
       </div>
       <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!..." width="100%" height="300" style="border:0;" allowfullscreen loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!https://g.co/kgs/42uCGMa" width="100%" height="300" style="border:0;" allowfullscreen loading="lazy"></iframe>
       </div>
     </div>
 
