--- a/templates/infrastructure.html
+++ b/templates/infrastructure.html
@@ -84,6 +84,14 @@
 
 
 
+<!-- Add spacing before footer -->
+<div class="container my-5">
+  <div class="row">
+    <div class="col-12 text-center">
+      <hr class="my-4">
+    </div>
+  </div>
+</div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
