Registered Office addres,and quality ma name chnage

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
     <div class="row text-center mb-5">
       <div class="col-md-4">
         <h5>Registered Office</h5>
-        <p>SHRI KHEMISATI PLASPACK LLP<br>E 514,Kailash Industrial Complex,Parksite,Vikhroli(W),Mumbai 400079,Plot No.125,Dan Udyog Sahakari Sangh Ltd,Village Piparia,Silvassa 396230.phone:9820123033 / 9322123033 Email :khemiindia@yahoo.com</p>
+        <p>SHRI KHEMISATI PLASPACK LLP<br>E 514,Kailash Industrial Complex,Parksite,Vikhroli(W),Mumbai 400079</p>
       </div>
       <div class="col-md-4">
         <h5>Factory Address</h5>
