quality one line delete

--- a/templates/quality.html
+++ b/templates/quality.html
@@ -27,7 +27,6 @@
       <div class="double-line mb-4"></div>
       <p><strong>Quality of our products and Service satisfaction of our customer is our prime focus.</strong></p>
       <p><strong>SHRI KHEMISATI PLASPACK LLP</strong> maintain quality right from the selection of raw material to the final delivery, the Quality Assurance team ensures that product meet all the required quality standards followed at each and every stage.</p>
-      <p>We focus on hygiene and cleanliness to ensure Food and <strong>Pharma grade FIBCs</strong> that are sanitized and free from dust, germs and pollutants.</p>
 
       <p class="fw-bold">At different levels of manufacturing process, our in-house “Quality Assurance System” strictly follows:</p>
       <ul class="list-unstyled">
@@ -39,6 +38,7 @@
         <li><i class="bi bi-patch-check-fill text-primary me-2"></i> Packing – Compacting and proper bailing</li>
       </ul>
 
+      <p>We fulfill the specific requirement of customer through most advance machinery, advance equipped quality control laboratory, highly experienced and expertise staff, and approved superior food grade polymers and other additive materials.</p>
     </div>
 
     <!-- Right Column: Image -->
@@ -50,6 +50,7 @@
 </div>
 
 
+    <p class="mt-4">We fulfill the specific requirement of customer through most advance machinery, advance equipped quality control laboratory, highly experienced and expertise staff, and approved superior food grade polymers and other additive materials.</p>
   </div>
 </section>
 
