--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -27,10 +27,6 @@
     transform: rotate(180deg);
   }
 
-  .navbar-nav .dropdown:hover .dropdown-menu {
-    display: block;
-  }
-
   .social-sidebar {
     position: fixed;
     top: 40%;
@@ -86,15 +82,12 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about_view' %}">About</a>
         </li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products <span class="toggle-sub-menu"></span>
@@ -116,23 +109,18 @@
             <li><a class="dropdown-item" href="{% url 'pharma-grade-fibc-bags' %}">Pharma Grade FIBC Bags</a></li>
           </ul>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'quality' %}">Quality</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'infrastructure' %}">Infrastructure</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'certification' %}">Certification</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
         </li>
-
       </ul>
     </div>
   </div>
@@ -148,5 +136,5 @@
   </a>
 </div>
 
-<!-- ✅ Bootstrap JS Bundle (must be at end of body) -->
+<!-- ✅ Bootstrap JS Bundle (place before </body>) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-+X3wQeEMYi9Wx1StOdEYOfqUocY0Zy4mRA0UBJ6NaAG1xEKaKqAnfZV0pzXLz54b" crossorigin="anonymous"></script>
