--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -1,11 +1,5 @@
 {% load static %}
 
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Font Awesome (for social icons) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
 <style>
   .toggle-sub-menu {
     margin-left: 5px;
@@ -25,6 +19,10 @@
 
   .dropdown.show .toggle-sub-menu {
     transform: rotate(180deg);
+  }
+
+  .navbar-nav .dropdown:hover .dropdown-menu {
+    display: block;
   }
 
   .social-sidebar {
@@ -82,12 +80,8 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about_view' %}">About</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'about_view' %}">About</a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Products <span class="toggle-sub-menu"></span>
@@ -109,18 +103,10 @@
             <li><a class="dropdown-item" href="{% url 'pharma-grade-fibc-bags' %}">Pharma Grade FIBC Bags</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'quality' %}">Quality</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'infrastructure' %}">Infrastructure</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'certification' %}">Certification</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'quality' %}">Quality</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'infrastructure' %}">Infrastructure</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'certification' %}">Certification</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li>
       </ul>
     </div>
   </div>
@@ -136,5 +122,13 @@
   </a>
 </div>
 
-<!-- ✅ Bootstrap JS Bundle (place before </body>) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-+X3wQeEMYi9Wx1StOdEYOfqUocY0Zy4mRA0UBJ6NaAG1xEKaKqAnfZV0pzXLz54b" crossorigin="anonymous"></script>
+<script>
+  document.querySelectorAll('.nav-item.dropdown > a').forEach((el) => {
+    el.addEventListener('click', function (e) {
+      const parent = this.closest('.dropdown');
+      setTimeout(() => {
+        parent.classList.toggle('show', this.getAttribute('aria-expanded') === 'true');
+      }, 150);
+    });
+  });
+</script>
