--- a/templates/base/headernsidebar.html
+++ b/templates/base/headernsidebar.html
@@ -1,4 +1,6 @@
 {% load static %}
+<!-- Font Awesome (for social icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 <style>
   .toggle-sub-menu {
@@ -19,10 +21,6 @@
 
   .dropdown.show .toggle-sub-menu {
     transform: rotate(180deg);
-  }
-
-  .navbar-nav .dropdown:hover .dropdown-menu {
-    display: block;
   }
 
   .social-sidebar {
@@ -48,25 +46,8 @@
     opacity: 0.9;
   }
 
-  .social-sidebar a.whatsapp {
-    background-color: #25D366;
-  }
-
-  .social-sidebar a.facebook {
-    background-color: #3b5998;
-  }
-
-  .social-sidebar a.instagram {
-    background-color: #E1306C;
-  }
-
-  .social-sidebar a.linkedin {
-    background-color: #0077b5;
-  }
-
-  .social-sidebar i {
-    font-size: 18px;
-  }
+  .social-sidebar a.whatsapp { background-color: #25D366; }
+  .social-sidebar a.linkedin { background-color: #0077b5; }
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
@@ -80,33 +61,27 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+
         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'about_view' %}">About</a></li>
+
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
             Products <span class="toggle-sub-menu"></span>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="productsDropdown">
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'u-panel-fibc' %}">U Panel FIBC</a></li>
             <li><a class="dropdown-item" href="{% url 'circular-fibc' %}">Circular FIBC</a></li>
             <li><a class="dropdown-item" href="{% url 'baffle-fibc-bags' %}">Baffle FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'un-fibc-bags' %}">UN FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'food-grade-fibc-bags' %}">Food Grade FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'ventilated-fibc-bags' %}">Ventilated FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'conductive-fibc-bags' %}">Conductive FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'fibc-liners' %}">FIBC Liners</a></li>
-            <li><a class="dropdown-item" href="{% url 'pp-woven-ground-cover' %}">PP Woven Ground Cover</a></li>
-            <li><a class="dropdown-item" href="{% url 'fibc-bags' %}">FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'dissipative-fibc-bags' %}">Dissipative FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url '4-panel-fibc-bags' %}">4 Panel FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'conical-fibc-bags' %}">Conical FIBC Bags</a></li>
-            <li><a class="dropdown-item" href="{% url 'pharma-grade-fibc-bags' %}">Pharma Grade FIBC Bags</a></li>
+            <!-- Add more links here -->
           </ul>
         </li>
+
         <li class="nav-item"><a class="nav-link" href="{% url 'quality' %}">Quality</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'infrastructure' %}">Infrastructure</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'certification' %}">Certification</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li>
+
       </ul>
     </div>
   </div>
@@ -121,14 +96,3 @@
     <i class="fab fa-linkedin-in"></i>
   </a>
 </div>
-
-<script>
-  document.querySelectorAll('.nav-item.dropdown > a').forEach((el) => {
-    el.addEventListener('click', function (e) {
-      const parent = this.closest('.dropdown');
-      setTimeout(() => {
-        parent.classList.toggle('show', this.getAttribute('aria-expanded') === 'true');
-      }, 150);
-    });
-  });
-</script>
